fix: adjust font size for better readability on larger screens

--- a/app/components/contact/styles.module.scss
+++ b/app/components/contact/styles.module.scss
@@ -136,7 +136,7 @@
         
     }
     @media(min-width: 1080px) {
-        font-size: clamp(7vw, 7vw, 14vw); 
+        font-size: clamp(6vw, 6vw, 14vw); 
     }
 
     .newLine {
@@ -229,7 +229,7 @@
             
         }
         @media(min-width: 1080px) {
-            font-size: clamp(2.5vw, 2.5vw, 12vw); 
+            font-size: clamp(1vw, 1.5vw, 12vw); 
         }
         
     
